fix(gtk3.20) reduce global spacing to 3px

--- a/gtk-3.20/scss/_global.scss
+++ b/gtk-3.20/scss/_global.scss
@@ -109,6 +109,6 @@ $backdrop_menu_color: if($variant == 'light', $backdrop_base_color, mix($backdro
 
 // widget styles
 $roundness: 2px;
-$spacing: 2px;
+$spacing: 3px;
 $gradient: 0;
 $contrast: .8;
